footer and main sections added & configured

--- a/src/app/topbar/topbar.component.scss
+++ b/src/app/topbar/topbar.component.scss
@@ -9,6 +9,7 @@
     align-items: center;
     font-size: 2rem;
     margin-left: 30px;
+    cursor: pointer;
 }
 
 .logo span{
@@ -48,10 +49,10 @@ nav a{
     color: #fff;
     transition: 0.3s;
     padding: 6px;
-    
 
-    
- 
+
+
+
 }
 
 
@@ -123,7 +124,7 @@ h2{
     margin: 55px 25px;
     background-color: #1271ed;
     color: #fff;
-    border: 3px solid #fff;
+    border: 1px solid #fff;
     font-family: 'Golos Text', sans-serif;
     letter-spacing: 1px;
     font-size: 1rem;
