--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -1,7 +1,11 @@
 <main>
   <div class="background">
       <section class="atractions">
-          <h2>Najważniejsze atrakcje</h2>
+          <h2>Najważniejsze <span>
+
+            atrakcje
+          </span>
+          </h2>
           <ul>
               <div class="temp">
                   <div class="box1">
@@ -15,7 +19,7 @@
                 </p>
                 <div class="button-cont">
 
-                    <button>Więcej informacji</button>
+                    <button>Więcej informacji na temat {{KatedraHelsinki}}</button>
                 </div>
 
             </div>
@@ -26,11 +30,11 @@
               Suurkirkko) jest głównym kościołem helsińskiej kongregacji katedralnej
               i diecezji helsińskiej. Kościół zaprojektowany przez Carla Ludviga
               Engela znajduje się na skraju Placu Senackiego w Kruununhaa.
-    
+
             </p>
             <div class="button-cont">
 
-                <button>Więcej informacji</button>
+                <button>Więcej informacji na temat {{Tuomiokirkko}}</button>
             </div>
             </div>
             <div class="box1">
@@ -39,38 +43,38 @@
                     Obecnie utraciła walory militarne,
                     posiada jednak wielkie znaczenie kulturowe jako zabytek historyczny i atrakcja turystyczna.
                     W 1991 r. została wpisana na listę światowego dziedzictwa UNESCO.
-                    
+
                    </p>
                     <div class="button-cont">
 
-                        <button>Więcej informacji</button>
+                        <button>Więcej informacji na temat {{Suomenlinna}} </button>
                     </div>
             </div>
             <div class="box1">
- 
+
                 <li>Arktikum w Rovaniemi</li>
                 <p>Arktikum to muzeum i centrum nauki w Rovaniemi w Finlandii. Budynek jest również popularnym miejscem kultury i miejscem spotkań i konferencji oraz posiada kawiarnię i bibliotekę do obsługi klientów. W Arktikum działają dwie oddzielne wystawy, Centrum Arktyczne i Muzeum Prowincjonalne Laponii.</p>
                 <div class="button-cont">
 
-                    <button>Więcej informacji</button>
+                    <button>Więcej informacji na temat {{MuzeumNarodowe}}</button>
                 </div>
             </div>
             <div class="box1">
-  
+
                 <li>Muzeum Narodowe Finlandii w Helsinkach</li>
                 <p>Muzeum położone w Helsinkach przy ulicy Mannerheimintie 34. Przedstawia historię Finlandii od czasów prehistorycznych do współczesności.
 
                     <div class="button-cont">
 
-                        <button>Więcej informacji</button>
+                        <button>Więcej informacji na temat{{ Arktikum }}</button>
                     </div>
             </div>
-           
-            
-        
-        
-           
-          
+
+
+
+
+
+
         </div>
         </ul>
     </section>
