--- a/src/app/main/main.component.scss
+++ b/src/app/main/main.component.scss
@@ -1,6 +1,6 @@
 .background{
-    background: linear-gradient(rgba(0, 0, 0, 0.575), rgba(0, 0, 0, 0.575)),url(../../assets/pexels-mitchell-henderson-2004388.jpg);
-    height: 180vh;
+    background: linear-gradient(rgba(0, 0, 0, 0.575), rgba(0, 0, 0, 0.575)),url(../../assets/pexels-mitchell-henderson-2004391.jpg);
+    height: 120vh;
     width: 100%;
     background-position: center;
     background-size: cover;
@@ -14,11 +14,16 @@ flex-direction: column;
 
 }
 .atractions h2{
-    font-size: 2.5rem;
+    font-size: 3.5rem;
     margin: 55px 25px;
     color: #1472ee;
     text-shadow: 1px 1px 4px #000;
     text-transform: uppercase;
+    opacity: 1;
+}
+
+h2 span{
+  color: #fff;
 }
 
 .temp{
@@ -37,29 +42,42 @@ flex-direction: column;
     margin: 35px 0px;
 }
 .box1 .button-cont button{
-    width: 200px;
-    height: 60px;
+    width: 250px;
+    height: 70px;
     background-color: #000;
     color: #fff;
-    font-size: 1rem;
+    font-size: .9rem;
     font-family: 'Golos Text', sans-serif;
     font-weight: 600;
-    border: 3px solid #1472ee;
+    border: 1px solid #5a3441;
     text-shadow: 1px 1px 2px #000;
     text-transform: uppercase;
     box-shadow: 1px 1px 3px #000;
+    cursor: pointer;
+ &:hover{
+  transition: 0.3s;
+  background-color: rgb(40, 39, 39);
+ }
 }
 li{
     font-size: 2rem;
     list-style: none;
-    color: #1472ee;
+    color: #448eee;
     text-transform: uppercase;
     text-align: left;
-    text-shadow: 1px 1px 3px #000;
+    text-shadow: 0px 1px 2px #000000;
+    margin: 0px 75px;
+
 }
 p{
     font-size: 1.2rem;
     text-align: left;
     color: #fff;
     text-shadow: 1px 1px 3px #000;
+    margin: 0px 75px;
+    opacity: 1;
+    border-top: 3px solid #5a3441;
+    padding-top: 5px;
+
+
 }
