--- a/src/app/topbar/topbar.component.html
+++ b/src/app/topbar/topbar.component.html
@@ -2,8 +2,8 @@
 
     <div class="top">
         <div class="logo-container">
-            <div class="logo"> <span>
-                
+            <div routerLink="" class="logo"> <span>
+
                 FINL
             </span>
             AND</div>
@@ -24,26 +24,26 @@
 </div>
 
     <div class="background-finland">
-    
-        
-    
+
+
+
         <div class="h1-container">
-            
+
             <h1> <span>
-        
+
                 Finlandia
                 </span>
                   -  kraj lasów, jezior i saun</h1>
         </div>
         <div class="button-container">
-            <h2>Odkryj piękno 
+            <h2>Odkryj piękno
                 <span>
 
                     Finlandii
                 </span>
-                
+
                 razem z nami</h2>
             <button>Zobacz więcej!</button>
         </div>
     </div>
-    
+
