deleted header from topbar component

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -4,10 +4,10 @@
     <a routerLink="interesting-facts-section"> Interesujące informacje</a>
   </li>
   <li>
-<a routerLink=""> Kontakt</a>
+<a routerLink="contact"> Kontakt</a>
   </li>
   <li>
-<a routerLink="">O nas</a>
+<a routerLink="about">O nas</a>
   </li>
 </ul>
 <div class="content-container">
