--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -9,7 +9,12 @@
           <ul>
               <div class="temp">
                   <div class="box1">
-                <li>Katedra Helsińska</li>
+                <li>
+                  <span>
+
+                    Katedra
+                  </span>
+                   Helsińska</li>
                 <p>
                     Zaprojektowana przez Carla Ludwiga Engela, znajduje się na placu
                     Senackim. Jest jednym z najlepiej rozpoznawanych obiektów w
@@ -19,12 +24,18 @@
                 </p>
                 <div class="button-cont">
 
-                    <button>Więcej informacji na temat {{KatedraHelsinki}}</button>
+                    <a href="https://pl.wikipedia.org/wiki/Katedra_w_Helsinkach">Więcej informacji na temat {{KatedraHelsinki}}</a>
                 </div>
 
             </div>
             <div class="box1">
-                <li>Tuomiokirkko - Kościół Mariacki w Turku</li>
+                <li>
+                  <span>
+
+                    Tuomiokirkko
+                  </span>
+
+                  - Kościół Mariacki w Turku</li>
                 <p>
                     Katedra w Helsinkach (pierwotnie kościół św. Mikołaja, 1917-1959
               Suurkirkko) jest głównym kościołem helsińskiej kongregacji katedralnej
@@ -34,11 +45,17 @@
             </p>
             <div class="button-cont">
 
-                <button>Więcej informacji na temat {{Tuomiokirkko}}</button>
+                <a href="https://fi.wikipedia.org/wiki/Helsingin_tuomiokirkko">Więcej informacji na temat {{Tuomiokirkko}}</a>
             </div>
             </div>
             <div class="box1">
-                <li>Twierdza Suomenlinna</li>
+                <li>
+                  <span>
+
+                    Twierdza
+                  </span>
+
+                  Suomenlinna</li>
                 <p>Twierdza w Helsinkach, położona na grupie sześciu wysp niedaleko brzegu. Dawniej miała za zadanie bronić Helsinek od strony morza.
                     Obecnie utraciła walory militarne,
                     posiada jednak wielkie znaczenie kulturowe jako zabytek historyczny i atrakcja turystyczna.
@@ -47,26 +64,37 @@
                    </p>
                     <div class="button-cont">
 
-                        <button>Więcej informacji na temat {{Suomenlinna}} </button>
+                        <a href="https://pl.wikipedia.org/wiki/Suomenlinna">Więcej informacji na temat {{Suomenlinna}} </a>
                     </div>
             </div>
             <div class="box1">
 
-                <li>Arktikum w Rovaniemi</li>
-                <p>Arktikum to muzeum i centrum nauki w Rovaniemi w Finlandii. Budynek jest również popularnym miejscem kultury i miejscem spotkań i konferencji oraz posiada kawiarnię i bibliotekę do obsługi klientów. W Arktikum działają dwie oddzielne wystawy, Centrum Arktyczne i Muzeum Prowincjonalne Laponii.</p>
+              <li>
+                  <span>
+                  Arktikum
+                </span>
+                   w Rovaniemi</li>
+                <p>
+
+                   To muzeum i centrum nauki w Rovaniemi w Finlandii. Budynek jest również popularnym miejscem kultury i miejscem spotkań i konferencji oraz posiada kawiarnię i bibliotekę do obsługi klientów. W Arktikum działają dwie oddzielne wystawy, Centrum Arktyczne i Muzeum Prowincjonalne Laponii.</p>
                 <div class="button-cont">
 
-                    <button>Więcej informacji na temat {{MuzeumNarodowe}}</button>
+                    <a href="https://en.wikipedia.org/wiki/Arktikum_Science_Museum">Więcej informacji na temat {{MuzeumNarodowe}}</a>
                 </div>
             </div>
             <div class="box1">
 
-                <li>Muzeum Narodowe Finlandii w Helsinkach</li>
+                <li>
+                  <span>
+
+                    Muzeum Narodowe
+                  </span>
+                   Finlandii w Helsinkach</li>
                 <p>Muzeum położone w Helsinkach przy ulicy Mannerheimintie 34. Przedstawia historię Finlandii od czasów prehistorycznych do współczesności.
 
                     <div class="button-cont">
 
-                        <button>Więcej informacji na temat{{ Arktikum }}</button>
+                        <a href="https://pl.wikipedia.org/wiki/Fi%C5%84skie_Muzeum_Narodowe">Więcej informacji na temat{{ Arktikum }}</a>
                     </div>
             </div>
 
