--- a/src/app/topbar/topbar.component.scss
+++ b/src/app/topbar/topbar.component.scss
@@ -2,6 +2,7 @@
     height: 8vh;
     background-color: #06070E;
     display: flex;
+    border-bottom: 1px solid #fff;
 }
 .logo{
     color: #fff;
