contact component styled

--- a/src/app/interesing-facts-section/interesing-facts-section.component.html
+++ b/src/app/interesing-facts-section/interesing-facts-section.component.html
@@ -1,3 +1,6 @@
+<div class="left">
+
+</div>
 <div class="background-finland">
   <h2>Interesujące
 
@@ -12,12 +15,22 @@
     <div class="box1">
         <div class="li-container">
 
-          <li>Finlandia ma największą liczbę jezior na osobę na świecie - w kraju tym przypada 187 888 jezior i ponad 500 tysięcy wysp.</li>
+          <li>
+            <span>
+
+              Finlandia
+            </span>
+             ma największą liczbę jezior na osobę na świecie - w kraju tym przypada 187 888 jezior i ponad 500 tysięcy wysp.</li>
         </div>
     </div>
     <div class="box1">
       <div class="li-container">
-        <li>Finlandia ma wiele pięknych parków narodowych, w których można podziwiać dziką przyrodę, takich jak parki Koli, Repovesi, Nuuksio i Oulanka.</li>
+        <li>
+          <span>
+
+            Finlandia
+          </span>
+           ma wiele pięknych parków narodowych, w których można podziwiać dziką przyrodę, takich jak parki Koli, Repovesi, Nuuksio i Oulanka.</li>
 
       </div>
     </div>
@@ -30,25 +43,47 @@
     </div>
     <div class="box1">
       <div class="li-container">
-        <li>Finlandia jest jednym z krajów, w którym najwięcej wypija się kawy - przypada na niego ponad 10 kg kawy na osobę rocznie.</li>
+        <li>
+          <span>
+
+            Finlandia
+          </span>
+           jest jednym z krajów, w którym najwięcej wypija się kawy - przypada na niego ponad 10 kg kawy na osobę rocznie.</li>
 
       </div>
     </div>
     <div class="box1">
       <div class="li-container">
-        <li>W Finlandii działa jedna z największych firm telekomunikacyjnych na świecie - Nokia.</li>
+        <li>W
+          <span>
+
+            Finlandii
+          </span>
+            działa jedna z największych firm telekomunikacyjnych na świecie - Nokia.</li>
 
       </div>
     </div>
     <div class="box1">
       <div class="li-container">
-        <li>Finlandia to kraj, w którym urodziło się wiele znanych postaci, takich jak architekt Alvar Aalto, projektantka mody Marimekko Armi Ratia, twórca gier komputerowych Markus "Notch" Persson czy projektant mebli Eero Aarnio.</li>
+        <li>
+          <span>
+            Finlandia
+          </span>
+
+           to kraj, w którym urodziło się wiele znanych postaci, takich jak architekt Alvar Aalto, projektantka mody Marimekko Armi Ratia, twórca gier komputerowych Markus "Notch" Persson czy projektant mebli Eero Aarnio.</li>
 
       </div>
     </div>
     <div class="box1">
       <div class="li-container">
-        <li>Finlandia ma jedno z najwyższych wskaźników czytelnictwa na świecie - ponad 70% Finów czyta co najmniej jedną książkę w roku.</li>
+        <li>
+          <span>
+
+
+            Finlandia
+          </span>
+
+          ma jedno z najwyższych wskaźników czytelnictwa na świecie - ponad 70% Finów czyta co najmniej jedną książkę w roku.</li>
 
       </div>
     </div>
@@ -61,15 +96,32 @@
     <div class="box1">
       <div class="li-container">
 
-        <li>Finlandia jest uważana za kraj, w którym najczęściej uprawia się saunę - w kraju tym jest ich ponad 3 miliony.</li>
+        <li>
+          <span>
+
+            Finlandia
+          </span>
+
+
+
+          jest uważana za kraj, w którym najczęściej uprawia się saunę - w kraju tym jest ich ponad 3 miliony.</li>
       </div>
     </div>
     <div class="box1">
       <div class="li-container">
-        <li>W Finlandii jest kilka dni w roku, kiedy słońce nigdy nie zachodzi, a także kilka dni, kiedy słońce nigdy nie wstaje - to efekt biegunowej położenia kraju.</li>
+        <li>W
+
+          <span>
+
+            Finlandii
+          </span>
+          jest kilka dni w roku, kiedy słońce nigdy nie zachodzi, a także kilka dni, kiedy słońce nigdy nie wstaje - to efekt biegunowej położenia kraju.</li>
 
       </div>
     </div>
   </ul>
 </div>
+</div>
+<div class="right">
+
 </div>
