--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,1 +1,24 @@
-<p>contact works!</p>
+<div class="background-finland">
+  <h2>FORMULARZ
+
+    <span>
+
+      KONTAKTOWY
+    </span>
+  </h2>
+  <div class="container">
+  <div class="flex">
+  <form>
+    <label for="firstName">Imię</label>
+    <input type="text" id="firstName" name="firstName">
+    <label for="firstName">Nazwisko</label>
+    <input type="text" id="secondName" name="secondName">
+    <label for="firstName">E-mail</label>
+    <input type="email" id="email" name="email">
+    <label for="" id="message" name="message">WIADOMOŚĆ</label>
+    <textarea  class="textarea" name="message" id="message" cols="30" rows="10"></textarea>
+  </form>
+</div>
+</div>
+
+</div>
