--- a/src/app/interesing-facts-section/interesing-facts-section.component.scss
+++ b/src/app/interesing-facts-section/interesing-facts-section.component.scss
@@ -1,10 +1,7 @@
 .background-finland{
   background-color: rgb(18, 17, 17);
-  height: 120vh;
+  height: 90vh;
   width: 100%;
-    background-position: center;
-    background-size: cover;
-
 }
 h2{
   display: flex;
@@ -15,6 +12,7 @@ h2{
   color: #fff;
   letter-spacing: 3px;
   gap: 15px;
+  text-transform: uppercase;
 }
 
 h2 span{
@@ -37,6 +35,7 @@ ul{
   margin-top: 100px;
   align-self: center;
   text-align: left;
+  margin-left: 30px;
 }
 
 ul li{
@@ -44,14 +43,35 @@ ul li{
 
 }
 
-.box1{
-
-
+.box1 .li-container li span{
+  color: #e05e5e;
 }
+
+
 .box1 .li-container{
   display: flex;
 
   color: #fff;
   margin: 15px 0px;
   max-width: 200px;
+}
+
+.left{
+  background-color: #101010;
+  height: 90vh;
+  position: absolute;
+  width: 23%;
+  border-right: 1px solid #e05e5e;
+}
+
+.right{
+  background-color: #101010;
+  height: 90vh;
+  position: absolute;
+  width: 23%;
+  left: 78%;
+  top: 8.1%;
+  border-top: 1px solid #fff;
+  border-left: 1px solid #e05e5e;
+
 }
