--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -26,7 +26,7 @@ h1{
 
 
 h1 span{
-  color: #1271ed;
+  color: #e05e5e;
 }
 
 
@@ -48,13 +48,13 @@ h2{
   text-shadow: 1px 1px 1px  #000;
 }
 .button-container h2 span{
-  color: #1271ed;
+  color: #e05e5e;
 }
 .button-container button{
   height: 60px;
   width: 250px;
   margin: 55px 25px;
-  background-color: #1271ed;
+  background-color: #e05e5e;
   color: #fff;
   border: 1px solid #fff;
   font-family: 'Golos Text', sans-serif;
