--- a/src/app/main/main.component.scss
+++ b/src/app/main/main.component.scss
@@ -67,7 +67,7 @@ h2 span{
 li{
     font-size: 2rem;
     list-style: none;
-    color: #448eee;
+    color: #a63535;;
     text-transform: uppercase;
     text-align: left;
     text-shadow: 0px 1px 2px #000000;
