--- a/src/app/topbar/topbar.component.html
+++ b/src/app/topbar/topbar.component.html
@@ -10,13 +10,13 @@
         </div>
     <nav>
         <ul>
-            <li>
+            <li [routerLinkActive]="'active'">
                 <a class="a-content" routerLink="interesting-facts-section">Interesujące Informacje</a>
             </li>
-            <li>
+            <li [routerLinkActive]="'active'">
                 <a class="a-content" routerLink="contact">Kontakt</a>
             </li>
-            <li>
+            <li [routerLinkActive]="'active'">
                 <a class="a-content" routerLink="about">O nas</a>
             </li>
         </ul>
