--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -13,8 +13,8 @@
     <input type="text" id="firstName" name="firstName">
     <label for="firstName">Nazwisko</label>
     <input type="text" id="secondName" name="secondName">
-    <label for="firstName">E-mail</label>
-    <input type="email" id="email" name="email">
+    <label  for="email">E-mail</label>
+    <input class="email" type="email" id="email" name="email">
     <label for="" id="message" name="message">WIADOMOŚĆ</label>
     <textarea  class="textarea" name="message" id="message" cols="30" rows="10"></textarea>
   </form>
