about section added

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,3 +1,5 @@
 <div class="background-finland">
+<h2>TWÓRCA</h2>
+<p>Twórcą strony jest Pum2A, po więcej projektów czy informacji zapraszam na github.</p>
 
 </div>
