--- a/src/app/about/about.component.scss
+++ b/src/app/about/about.component.scss
@@ -5,3 +5,22 @@
 
 
 }
+
+h2{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 25px 25px;
+  color: #fff;
+  font-size: 3rem;
+
+}
+
+p{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 25px 25px;
+  color: #fff;
+  font-size: 1.5rem;
+}
