--- a/src/app/contact/contact.component.scss
+++ b/src/app/contact/contact.component.scss
@@ -58,6 +58,7 @@ input{
   outline: none;
   letter-spacing: 2px;
   font-family: 'Golos Text', sans-serif;
+  box-shadow: 1px 1px 5px #fff;
 
 }
 
@@ -75,6 +76,8 @@ textarea{
   color: #fff;
   font-size: 1.2rem;
   font-family: 'Golos Text', sans-serif;
+  box-shadow: 1px 1px 5px #fff;
+
 
 }
 
