--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -73,3 +73,15 @@ h2{
   background-color: #083774;
   transition: 0.3s;
 }
+
+
+@media screen and (max-width: 700px){
+h1{
+  text-align: center;
+  max-width: 350px;
+}
+h2{
+  text-align: center;
+  max-width: 350px;
+}
+}
