--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -11,6 +11,6 @@
   </li>
 </ul>
 <div class="content-container">
-<p>Strona została stworzona przez Pum2A. Wszelkie prawa zastrzeżone.</p>
+<p>© 2023 Pum2A</p>
 </div>
 </footer>
