--- a/src/app/main/main.component.scss
+++ b/src/app/main/main.component.scss
@@ -1,5 +1,6 @@
 .background{
-  background-color: rgb(18, 17, 17);
+  background-color: #0b0c13;
+
     height: 120vh;
     width: 100%;
     background-position: center;
@@ -67,7 +68,7 @@ h2 span{
 li{
     font-size: 2rem;
     list-style: none;
-    color: #a63535;;
+    color: #a63535;
     text-transform: uppercase;
     text-align: left;
     text-shadow: 0px 1px 2px #000000;
