--- a/src/app/topbar/topbar.component.scss
+++ b/src/app/topbar/topbar.component.scss
@@ -1,8 +1,7 @@
 .top{
     height: 8vh;
-    background-color: #06070E;
+    background-color: #0b0c13;
     display: flex;
-    border-bottom: 1px solid #fff;
 }
 .logo{
     color: #fff;
