--- a/src/app/interesing-facts-section/interesing-facts-section.component.scss
+++ b/src/app/interesing-facts-section/interesing-facts-section.component.scss
@@ -1,6 +1,7 @@
 .background-finland{
-  background-color: rgb(18, 17, 17);
-  height: 90vh;
+  background-color: #0b0c13;
+
+  height: 100vh;
   width: 100%;
 }
 h2{
@@ -56,22 +57,3 @@ ul li{
   max-width: 200px;
 }
 
-.left{
-  background-color: #101010;
-  height: 90vh;
-  position: absolute;
-  width: 23%;
-  border-right: 1px solid #e05e5e;
-}
-
-.right{
-  background-color: #101010;
-  height: 90vh;
-  position: absolute;
-  width: 23%;
-  left: 78%;
-  top: 8.1%;
-  border-top: 1px solid #fff;
-  border-left: 1px solid #e05e5e;
-
-}
