--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,5 +1,7 @@
 <div class="background-finland">
 <h2>TWÓRCA</h2>
-<p>Twórcą strony jest Pum2A, po więcej projektów czy informacji zapraszam na github.</p>
+<p>Twórcą strony jest Pum2A, po więcej projektów czy informacji zapraszam na
+  <a href="https://github.com/pum2a">github</a>
+</p>
 
 </div>
