--- a/src/app/about/about.component.scss
+++ b/src/app/about/about.component.scss
@@ -15,6 +15,15 @@ h2{
   font-size: 3rem;
 
 }
+a{
+  margin: 5px 5px;
+  color: #fff;
+  transition: 0.3s ease-in-out;
+  &:hover{
+    color: red;
+    transition: 0.3s ease-in-out;
+  }
+}
 
 p{
   display: flex;
